--- a/style.css
+++ b/style.css
@@ -1,11 +1,11 @@
 * {
     margin: 0;
     padding: 0;
+    outline: none !important;
 }
 
 #theBody {
     background-color: aquamarine;
-
 }
 
 #quote-box {
@@ -41,6 +41,8 @@
     width: 150px;
     align-self: center;
     height: 35px;
+    line-height: 32px;
+    text-align: center;
     background-color: #fff;
     border-width: 1.5px;
     border-radius: 17.5px;
@@ -71,8 +73,7 @@
     height: 30px;
     width: 30px;
     border-radius: 15px;
-    border-width: 2px;
-    border-color: #000;
+    border: 2px solid #000;
     margin: 10px;
     cursor: pointer;
 }
